--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -1618,6 +1618,15 @@ pre code {
   background-color: #5a5c69;
   border-color: #6c6e7e;
 }
+.table .thead-blue th {
+  color: #fff;
+  background-color: #4e73df;
+  border-color: #6c6e7e;
+}
+.table .thead-blue {
+  color: #fff;
+  background-color: #4e73df;
+}
 
 .table .thead-light th {
   color: #6e707e;
@@ -9568,13 +9577,14 @@ a:focus {
 }
 
 #wrapper #content-wrapper {
-  background-color: #f8f9fc;
+  background-color: #ffffff;
   width: 100%;
   overflow-x: hidden;
 }
 
 #wrapper #content-wrapper #content {
   flex: 1 0 auto;
+  
 }
 
 .container,
@@ -9668,7 +9678,7 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-image: linear-gradient(180deg, #4e73df 10%, #4e73df 100%);
   background-size: cover;
 }
 
