--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -1621,7 +1621,7 @@ pre code {
 .table .thead-blue th {
   color: #fff;
   background-color: #4e73df;
-  border-color: #6c6e7e;
+  border-color: #ffffff;
 }
 .table .thead-blue {
   color: #fff;
